--- a/Algorithm/spo2.ipynb
+++ b/Algorithm/spo2.ipynb
@@ -16,31 +16,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 as cv"
+    "import cv2 as cv\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_pic = cv.imread(\"./imp.jpg\")"
+    "data_pic = cv.imread(\"./imp.jpg\")\n",
+    "dis_pic(data_pic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.imshow('image',data_pic)\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
+    "# cv.imshow('image',data_pic)\n",
+    "# cv.waitKey(0)\n",
+    "# cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dis_pic(pic_name):\n",
+    "    cv.imshow('image',pic_name)\n",
+    "    cv.waitKey(0)\n",
+    "    cv.destroyAllWindows()\n",
+    "    "
    ]
   },
   {
@@ -48,6 +63,46 @@
    "metadata": {},
    "source": [
     "2. Reading dimentions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_pic_red = data_pic[:,:,1]\n",
+    "# dis_pic(data_pic_red)\n",
+    "f = max_rgb_filter(data_pic)\n",
+    "cv.imshow(\"Images\", np.hstack([data_pic, f]))\n",
+    "cv.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_rgb_filter(image):\n",
+    "    (B, G, R) = cv.split(image)\n",
+    "    M = np.maximum(np.maximum(R, G), B)\n",
+    "    R[R < M] = 0\n",
+    "    G[G < M] = 0\n",
+    "    B[B < M] = 0\n",
+    "\n",
+    "    return cv.merge([B, G, R])"
    ]
   },
   {
