Algo4 - Finding Image Mean RED

--- a/Algorithm/spo2.ipynb
+++ b/Algorithm/spo2.ipynb
@@ -268,7 +268,9 @@
    "outputs": [],
    "source": [
     "# Finding image mean\n",
-    "# image_mean1 = sum(count_R.*binslocation_R)/sum(count_R);"
+    "# image_mean1 = sum(count_R.*binslocation_R)/sum(count_R);\n",
+    "\n",
+    "image_mean = sum(RED[0])"
    ]
   },
   {
