Final SPO2 value found

--- a/Algorithm/spo2.ipynb
+++ b/Algorithm/spo2.ipynb
@@ -425,6 +425,38 @@
     "# max(BLUE[0])\n",
     "print(\"BLUE index 50 value : {}\".format(BLUE[0][50]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SPO2 : 96.86818260127255\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#  RED/RED + BLUE\n",
+    "img_m = max(RED[0])/(max(RED[0])+BLUE[0][50])\n",
+    "print(\"SPO2 : {}\".format(img_m*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  "
+   ]
   }
  ],
  "metadata": {
